--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context="com.jon_dhc.to_do_first.MainActivity">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,7 +36,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="false"
-            android:layout_centerVertical="false" />
+            android:layout_centerVertical="false"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/etNewItem"
@@ -47,17 +49,19 @@
             android:layout_alignTop="@+id/btnAddItem"
             android:layout_toLeftOf="@+id/btnAddItem"
             android:layout_toStartOf="@+id/btnAddItem"
+            android:textColor="@color/white"
+            android:textColorHint="@color/blueish"
             android:hint="@string/item_input_hint" />
 
         <Button
             android:id="@+id/btnAddItem"
-            style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:onClick="onAddItem"
+            android:textColor="@color/white"
             android:text="@string/add_item_button" />
 
     </RelativeLayout>
